[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>", "Arthur Silva <arthurprs@gmail.com>", "ticki <Ticki@users.noreply.github.com>"]
description = "Fastest LZ4 implementation in Rust, no unsafe by default."
edition = "2021"
keywords = ["compression", "lz4", "compress", "decompression", "decompress"]
name = "lz4_flex"
homepage = "https://github.com/pseitz/lz4_flex"
repository = "https://github.com/pseitz/lz4_flex"
readme = "README.md"
license = "MIT"
version = "0.11.1"
include = ["src/*.rs", "src/frame/**/*", "src/block/**/*", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "crit_bench"
path = "benches/crit_bench.rs"

[dev-dependencies]
criterion = { git = "https://github.com/PSeitz/criterion.rs/", rev = "cf60ffc"}
lzzzz = "1.0.4"
lz4-compress = "0.1.1"
more-asserts = "0.3.1"
snap = "1.1.0"
serde_json = "1.0.91"
proptest = "1.0.0"

[dev-dependencies.lz-fear]
git = "https://github.com/main--/rust-lz-fear"

 #Uncomment to make lz4_flex master available as lz4_flex_master
 #[dev-dependencies.lz4_flex_master]
 #rev= "a122673" # v10
 #git = "https://github.com/PSeitz/lz4_flex"
 #package = "lz4_flex"
 #default-features=false
 #features = ["std", "safe-encode", "safe-decode", "frame"]

[features]
default = ["std", "safe-encode", "safe-decode", "frame"]
safe-decode = []
safe-encode = []
#unchecked-decode = [] # Removes some checks for additional performance. Only enable on trusted input!
frame = ["std", "dep:twox-hash"]
std = []
# use nightly compiler features
nightly = []

[dependencies]
twox-hash = { version = "1.6.3", default-features = false, optional = true }

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
#debug = true
opt-level = 3
panic = "unwind"

# [[bench]]
# harness = false
# name = "quickbench"
# path = "benches/quickbench.rs"

# [[bench]]
# harness = false
# name = "bench"
# path = "benches/bench.rs"

# [[bin]]
# name = "decompress_with_stats"
# path = "src/test_bins/decompress_with_stats.rs"

# [[bin]]
# name = "profile_decomp"
# path = "src/test_bins/profile_decomp.rs"

# [[bin]]
# name = "profile_comp"
# path = "src/test_bins/profile_comp.rs"
