[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
description = "High Performance lz4 wasm implementation"
edition = "2018"
name = "lz4-wasm"
version = "0.7.4"
license = "MIT"
keywords = ["compression", "lz4", "compress", "decompression", "decompress", "wasm"]

[dependencies]
wasm-bindgen = "0.2.7"
lz4_flex = { path = "../", default-features = false, features = ["checked-decode"] }

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.6"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
# opt-level = "s"
opt-level = 3 # opt-level 3 is smaller than s
