[package]
name = "lz4"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["fs", "macros", "rt-multi-thread", "io-util",] }
lz4_flex = { path = "../", features = [] }
argh = "0.1.4"
quick-error = "2.0.0"
anyhow = "1.0.40"
