[package]
name = "lz4"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = { path = "../", features = [] }
argh = "0.1.4"
anyhow = "1.0.40"
